src/main/scala/chana/jpql/nodes/JPQLParser.scala
package chana.jpql.nodes

import chana.jpql.rats.JPQLGrammar
import java.io.StringReader
import xtc.tree.Node

final class JPQLParser() {

  private var indentLevel = 0
  protected var nodePath = List[Node]()
  protected var _errors = List[Node]()

  /**
   * main entrance
   */
  def parse(jpql: String) = {
    val reader = new StringReader(jpql)
    val grammar = new JPQLGrammar(reader, "<current>")
    val r = grammar.pJPQL(0)
    if (r.hasValue) {
      val rootNode = r.semanticValue[Node]
      val stmt = visitRoot(rootNode)
      stmt
    } else {
      throw new Exception(r.parseError.msg + " at " + r.parseError.index)
    }
  }

  def visitRoot(rootNode: Node) = {
    JPQL(rootNode)
  }

  protected def enter(node: Node): Unit = {
    indentLevel += 1
    nodePath ::= node // push
  }

  protected def exit(node: Node) {
    indentLevel -= 1
    nodePath = nodePath.tail // pop
  }

  // -------- general node visit method
  private def visit[T](node: Node)(body: Node => T): T = {
    enter(node)
    val res = body(node)
    exit(node)
    res
  }

  private def visitOpt[T](node: Node)(body: Node => T): Option[T] = {
    if (node eq null) None
    else Some(visit(node)(body))
  }

  private def visitList[T](nodes: xtc.util.Pair[Node])(body: Node => T): List[T] = {
    if (nodes eq null) Nil
    else {
      var rs = List[T]()
      val xs = nodes.iterator
      while (xs.hasNext) {
        rs ::= visit(xs.next)(body)
      }
      rs.reverse
    }
  }

  // =========================================================================

  def JPQL(node: Node): Statement = {
    val n = node.getNode(0)
    n.getName match {
      case "SelectStatement" => visit(n)(selectStatement)
      case "UpdateStatement" => visit(n)(updateStatement)
      case "DeleteStatement" => visit(n)(deleteStatement)
      case "InsertStatement" => visit(n)(insertStatement)
    }
  }

  /*-
     SelectClause FromClause WhereClause? GroupbyClause? HavingClause? OrderbyClause?
   */
  def selectStatement(node: Node) = {
    val select = visit(node.getNode(0))(selectClause)
    val from = visit(node.getNode(1))(fromClause)
    val where = visitOpt(node.getNode(2))(whereClause)
    val groupby = visitOpt(node.getNode(3))(groupbyClause)
    val having = visitOpt(node.getNode(4))(havingClause)
    val orderby = visitOpt(node.getNode(5))(orderbyClause)
    SelectStatement(select, from, where, groupby, having, orderby)
  }

  /*-
     UpdateClause SetClause WhereClause?
   */
  def updateStatement(node: Node) = {
    val update = visit(node.getNode(0))(updateClause)
    val set = visit(node.getNode(1))(setClause)
    val where = visitOpt(node.getNode(2))(whereClause)
    UpdateStatement(update, set, where)
  }

  /*-
     UPDATE EntityName ( AS? Ident )? 
   */
  def updateClause(node: Node) = {
    val entity = visit(node.getNode(0))(entityName)
    val as = visitOpt(node.getNode(1))(ident)
    UpdateClause(entity, as)
  }

  /*-
     SET SetAssignClause ( COMMA SetAssignClause )*
   */
  def setClause(node: Node) = {
    val assign = visit(node.getNode(0))(setAssignClause)
    val assigns = visitList(node.getList(1))(setAssignClause)
    SetClause(assign, assigns)
  }

  /*-
     SetAssignTarget EQ NewValue
   */
  def setAssignClause(node: Node) = {
    val target = visit(node.getNode(0))(setAssignTarget)
    val newVal = visit(node.getNode(1))(newValue)
    SetAssignClause(target, newVal)
  }

  /*-
     PathExpr
   / Attribute
   */
  def setAssignTarget(node: Node) = {
    val n = node.getNode(0)
    val target = n.getName match {
      case "PathExpr"  => Left(visit(n)(pathExpr))
      case "Attribute" => Right(visit(n)(attribute))
    }
    SetAssignTarget(target)
  }

  /*-
     ScalarExpr
   / NULL
   */
  def newValue(node: Node) = {
    val v = if (node.isEmpty) null
    else {
      visit(node.getNode(0))(scalarExpr)
    }
    NewValue(v)
  }

  /*-
     DeleteClause WhereClause?
   */
  def deleteStatement(node: Node) = {
    val delete = visit(node.getNode(0))(deleteClause)
    val where = visitOpt(node.getNode(1))(whereClause)
    DeleteStatement(delete, where)
  }

  /*-
     DELETE FROM EntityName ( AS? Ident )?
   */
  def deleteClause(node: Node) = {
    val name = visit(node.getNode(0))(entityName)
    val as = visitOpt(node.getNode(1))(ident)
    DeleteClause(name, as)
  }

  /*-
    InsertClause AttributesClause? ValuesClause 
   */
  def insertStatement(node: Node) = {
    val insert = visit(node.getNode(0))(insertClause)
    val attrbutes = visitOpt(node.getNode(1))(attributesClause)
    val values = visit(node.getNode(2))(valuesClause)
    InsertStatement(insert, attrbutes, values)
  }

  /*-
    INSERT EntityName   
   */
  def insertClause(node: Node) = {
    val name = visit(node.getNode(0))(entityName)
    InsertClause(name)
  }

  /*-
    LParen Attribute ( COMMA Attribute )* RParen 
   */
  def attributesClause(node: Node) = {
    val attr = visit(node.getNode(0))(attribute)
    val attrs = visitList(node.getList(1))(attribute)
    AttributesClause(attr, attrs)
  }

  /*-
    VALUES LParen NewValue ( COMMA NewValue )* RParen
   */
  def valuesClause(node: Node) = {
    val value = visit(node.getNode(0))(newValue)
    val values = visitList(node.getList(1))(newValue)
    ValuesClause(value, values)
  }

  /*-
     SELECT DISTINCT? SelectItem (COMMA SelectItem )* 
   */
  def selectClause(node: Node) = {
    val isDistinct = node.get(0) ne null
    val item = visit(node.getNode(1))(selectItem)
    val items = visitList(node.getList(2))(selectItem)
    SelectClause(isDistinct, item, items)
  }

  /*-
     SelectExpr ( AS? Ident )?
   */
  def selectItem(node: Node) = {
    val item = visit(node.getNode(0))(selectExpr)
    val as = visitOpt(node.getNode(1))(ident)
    SelectItem(item, as)
  }

  /*-
     AggregateExpr
   / ScalarExpr
   / OBJECT LParen VarAccessOrTypeConstant RParen
   / ConstructorExpr
   / MapEntryExpr
   */
  def selectExpr(node: Node): SelectExpr = {
    val n = node.getNode(0)
    n.getName match {
      case "AggregateExpr"           => SelectExpr_AggregateExpr(visit(n)(aggregateExpr))
      case "ScalarExpr"              => SelectExpr_ScalarExpr(visit(n)(scalarExpr))
      case "VarAccessOrTypeConstant" => SelectExpr_OBJECT(visit(n)(varAccessOrTypeConstant))
      case "ConstructorExpr"         => SelectExpr_ConstructorExpr(visit(n)(constructorExpr))
      case "MapEntryExpr"            => SelectExpr_MapEntryExpr(visit(n)(mapEntryExpr))
    }
  }

  /*-
     ENTRY LParen VarAccessOrTypeConstant RParen
   */
  def mapEntryExpr(node: Node) = {
    val entry = visit(node.getNode(0))(varAccessOrTypeConstant)
    MapEntryExpr(entry)
  }

  /*-
     QualIdentVar      ( DOT Attribute )*
   / FuncsReturningAny ( DOT Attribute )*
   */
  def pathExprOrVarAccess(node: Node) = {
    val n = node.getNode(0)
    val attributes = visitList(node.getList(1))(attribute)
    n.getName match {
      case "QualIdentVar" =>
        val qual = visit(n)(qualIdentVar)
        PathExprOrVarAccess_QualIdentVar(qual, attributes)
      case "FuncsReturningAny" =>
        val value = visit(n)(funcsReturningAny)
        PathExprOrVarAccess_FuncsReturingAny(value, attributes)
    }
  }

  /*-
     VarAccessOrTypeConstant
   */
  def qualIdentVar(node: Node) = {
    QualIdentVar(visit(node.getNode(0))(varAccessOrTypeConstant))
  }

  /*-
     AVG   LParen DISTINCT? ScalarExpr RParen
   / MAX   LParen DISTINCT? ScalarExpr RParen
   / MIN   LParen DISTINCT? ScalarExpr RParen
   / SUM   LParen DISTINCT? ScalarExpr RParen
   / COUNT LParen DISTINCT? ScalarExpr RParen
   */
  def aggregateExpr(node: Node) = {
    val isDistinct = node.get(1) eq null
    val expr = visit(node.getNode(2))(scalarExpr)
    node.getString(0) match {
      case "avg"   => AggregateExpr_AVG(isDistinct, expr)
      case "max"   => AggregateExpr_MAX(isDistinct, expr)
      case "min"   => AggregateExpr_MIN(isDistinct, expr)
      case "sum"   => AggregateExpr_SUM(isDistinct, expr)
      case "count" => AggregateExpr_COUNT(isDistinct, expr)
    }
  }

  /*-
     NEW ConstructorName LParen ConstructorItem ( COMMA ConstructorItem )* RParen
   */
  def constructorExpr(node: Node) = {
    val name = visit(node.getNode(0))(constructorName)
    val arg = visit(node.getNode(1))(constructorItem)
    val args = visitList(node.getList(2))(constructorItem)
    ConstructorExpr(name, arg, args)
  }

  /*-
     Ident ( DOT Ident )*
   */
  def constructorName(node: Node) = {
    val field = visit(node.getNode(0))(ident)
    val paths = visitList(node.getList(1))(ident)
    ConstructorName(field, paths)
  }

  /*-
     ScalarExpr
   / AggregateExpr
   */
  def constructorItem(node: Node) = {
    val n = node.getNode(0)
    n.getName match {
      case "ScalarExpr"    => ConstructorItem_ScalarExpr(visit(n)(scalarExpr))
      case "AggregateExpr" => ConstructorItem_AggregateExpr(visit(n)(aggregateExpr))
    }
  }

  /*-
     FROM IdentVarDecl ( COMMA ( IdentVarDecl / CollectionMemberDecl) )*
   */
  def fromClause(node: Node) = {
    val from = visit(node.getNode(0))(identVarDecl)
    val froms = visitList(node.getList(1)) { n =>
      n.getName match {
        case "IdentVarDecl"         => Left(visit(n)(identVarDecl))
        case "CollectionMemberDecl" => Right(visit(n)(collectionMemberDecl))
      }
    }
    FromClause(from, froms)
  }

  /*-
     RangeVarDecl Join*
   */
  def identVarDecl(node: Node) = {
    val varDecl = visit(node.getNode(0))(rangeVarDecl)
    val joins = visitList(node.getList(1))(join)
    IdentVarDecl(varDecl, joins)
  }

  /*-
     EntityName AS? Ident
   */
  def rangeVarDecl(node: Node) = {
    val entity = visit(node.getNode(0))(entityName)
    val as = visit(node.getNode(1))(ident)
    RangeVarDecl(entity, as)
  }

  /*-
     Identifier
   */
  def entityName(node: Node) = {
    val name = node.getString(0)
    EntityName(name)
  }

  /*-
     JoinSpec              JoinAssocPathExpr                  AS? Ident  JoinCond?
   / JoinSpec TREAT LParen JoinAssocPathExpr AS Ident  RParen AS? Ident  JoinCond?
   / JoinSpec FETCH        JoinAssocPathExpr                      Ident? JoinCond?
   */
  def join(node: Node) = {
    val spec = visit(node.getNode(0))(joinSpec)
    node.size match {
      case 4 =>
        val expr = visit(node.getNode(1))(joinAssocPathExpr)
        val as = visit(node.getNode(2))(ident)
        val cond = visitOpt(node.getNode(3))(joinCond)
        Join_General(spec, expr, as, cond)

      case 6 =>
        val expr = visit(node.getNode(2))(joinAssocPathExpr)
        val exprAs = visit(node.getNode(3))(ident)
        val as = visit(node.getNode(4))(ident)
        val cond = visitOpt(node.getNode(5))(joinCond)
        Join_TREAT(spec, expr, exprAs, as, cond)

      case 5 =>
        val expr = visit(node.getNode(2))(joinAssocPathExpr)
        val as = visitOpt(node.getNode(3))(ident)
        val cond = visitOpt(node.getNode(4))(joinCond)
        Join_FETCH(spec, expr, as, cond)
    }
  }

  /*-
     JOIN
   / LEFT JOIN
   / LEFT OUTER JOIN
   / INNER JOIN
   */
  def joinSpec(node: Node) = {
    node.size match {
      case 1 => JOIN
      case 2 =>
        node.getString(0) match {
          case "left"  => LEFT_JOIN
          case "inner" => INNER_JOIN
        }
      case 3 => LEFT_OUTER_JOIN
    }
  }

  /*-
     ON CondExpr
   */
  def joinCond(node: Node) = {
    val expr = visit(node.getNode(0))(condExpr)
    JoinCond(expr)
  }

  /*-
     IN LParen CollectionValuedPathExpr RParen AS? Ident
   */
  def collectionMemberDecl(node: Node) = {
    val expr = visit(node.getNode(0))(collectionValuedPathExpr)
    val as = visit(node.getNode(1))(ident)
    CollectionMemberDecl(expr, as)
  }

  /*-
     PathExpr
   */
  def collectionValuedPathExpr(node: Node) = {
    val expr = visit(node.getNode(0))(pathExpr)
    CollectionValuedPathExpr(expr)
  }

  /*-
     PathExpr
   */
  def assocPathExpr(node: Node) = {
    val expr = visit(node.getNode(0))(pathExpr)
    AssocPathExpr(expr)
  }

  /*-
     QualIdentVar ( DOT Attribute )*
   */
  def joinAssocPathExpr(node: Node) = {
    val qual = visit(node.getNode(0))(qualIdentVar)
    val attributes = visitList(node.getList(1))(attribute)
    JoinAssocPathExpr(qual, attributes)
  }

  /*-
     PathExpr
   */
  def singleValuedPathExpr(node: Node) = {
    val expr = visit(node.getNode(0))(pathExpr)
    SingleValuedPathExpr(expr)
  }

  /*-
     PathExpr 
   */
  def stateFieldPathExpr(node: Node) = {
    val expr = visit(node.getNode(0))(pathExpr)
    StateFieldPathExpr(expr)
  }

  /*-
     QualIdentVar ( DOT Attribute )+
   */
  def pathExpr(node: Node) = {
    val qual = visit(node.getNode(0))(qualIdentVar)
    val attributes = visitList(node.getList(1))(attribute)
    PathExpr(qual, attributes)
  }

  /*-
     AttributeName
   */
  def attribute(node: Node) = {
    val name = node.getString(0)
    Attribute(name)
  }

  /*-
     Ident
   */
  def varAccessOrTypeConstant(node: Node) = {
    val id = visit(node.getNode(0))(ident)
    VarAccessOrTypeConstant(id)
  }

  /*-
     WHERE CondExpr 
   */
  def whereClause(node: Node) = {
    val expr = visit(node.getNode(0))(condExpr)
    WhereClause(expr)
  }

  /*-
     CondTerm ( OR CondTerm )*
   */
  def condExpr(node: Node): CondExpr = {
    val term = visit(node.getNode(0))(condTerm)
    val andTerms = visitList(node.getList(1))(condTerm)
    CondExpr(term, andTerms)
  }

  /*-
     CondFactor ( AND CondFactor )*
   */
  def condTerm(node: Node) = {
    val factor = visit(node.getNode(0))(condFactor)
    val andFactors = visitList(node.getList(1))(condFactor)
    CondTerm(factor, andFactors)
  }

  /*-
     NOT? ( CondPrimary / ExistsExpr )
   */
  def condFactor(node: Node) = {
    val not = node.get(0) ne null
    val n = node.getNode(1)
    val expr = n.getName match {
      case "CondPrimary" => Left(visit(n)(condPrimary))
      case "ExistsExpr"  => Right(visit(n)(existsExpr))
    }
    CondFactor(not, expr)
  }

  /*-
     LParen CondExpr RParen
   / SimpleCondExpr
   */
  def condPrimary(node: Node) = {
    val n = node.getNode(0)
    n.getName match {
      case "CondExpr"       => CondPrimary_CondExpr(visit(n)(condExpr))
      case "SimpleCondExpr" => CondPrimary_SimpleCondExpr(visit(n)(simpleCondExpr))
    }
  }

  /*-
     ArithExpr          SimpleCondExprRem
   / NonArithScalarExpr SimpleCondExprRem
   */
  def simpleCondExpr(node: Node) = {
    val n = node.getNode(0)
    val expr = n.getName match {
      case "ArithExpr"          => Left(visit(n)(arithExpr))
      case "NonArithScalarExpr" => Right(visit(n)(nonArithScalarExpr))
    }
    val rem = visit(node.getNode(1))(simpleCondExprRem)
    SimpleCondExpr(expr, rem)
  }

  /*-
     ComparisonExpr
   / NOT? CondWithNotExpr 
   / IS NOT? IsExpr
   */
  def simpleCondExprRem(node: Node) = {
    node.get(0) match {
      case n: Node => SimpleCondExprRem_ComparisonExpr(visit(n)(comparisonExpr))
      case null =>
        val n2 = node.getNode(1)
        n2.getName match {
          case "CondWithNotExpr" => SimpleCondExprRem_CondWithNotExpr(false, visit(n2)(condWithNotExpr))
          case "IsExpr"          => SimpleCondExprRem_IsExpr(false, visit(n2)(isExpr))
        }
      case "not" =>
        val n2 = node.getNode(1)
        n2.getName match {
          case "CondWithNotExpr" => SimpleCondExprRem_CondWithNotExpr(true, visit(n2)(condWithNotExpr))
          case "IsExpr"          => SimpleCondExprRem_IsExpr(true, visit(n2)(isExpr))
        }
    }
  }

  /*-
     BetweenExpr
   / LikeExpr
   / InExpr
   / CollectionMemberExpr
   */
  def condWithNotExpr(node: Node) = {
    val n = node.getNode(0)
    n.getName match {
      case "BetweenExpr"          => CondWithNotExpr_BetweenExpr(visit(n)(betweenExpr))
      case "LikeExpr"             => CondWithNotExpr_LikeExpr(visit(n)(likeExpr))
      case "InExpr"               => CondWithNotExpr_InExpr(visit(n)(inExpr))
      case "CollectionMemberExpr" => CondWithNotExpr_CollectionMemberExpr(visit(n)(collectionMemberExpr))
    }
  }

  /*-
     NullComparisonExpr
   / EmptyCollectionComparisonExpr
   */
  def isExpr(node: Node) = {
    node.getNode(0).getName match {
      case "NullComparisonExpr"            => IsNullExpr
      case "EmptyCollectionComparisonExpr" => IsEmptyExpr
    }
  }

  /*-
     BETWEEN ScalarOrSubselectExpr AND ScalarOrSubselectExpr
   */
  def betweenExpr(node: Node) = {
    val minExpr = visit(node.getNode(0))(scalarOrSubselectExpr)
    val maxExpr = visit(node.getNode(1))(scalarOrSubselectExpr)
    BetweenExpr(minExpr, maxExpr)
  }

  /*-
     IN InputParam
   / IN LParen ScalarOrSubselectExpr ( COMMA ScalarOrSubselectExpr )* RParen
   / IN LParen Subquery                                               RParen
   */
  def inExpr(node: Node) = {
    val n = node.getNode(0)
    n.getName match {
      case "InputParam"            => InExpr_InputParam(visit(n)(inputParam))
      case "ScalarOrSubselectExpr" => InExpr_ScalarOrSubselectExpr(visit(n)(scalarOrSubselectExpr), visitList(node.getList(1))(scalarOrSubselectExpr))
      case "Subquery"              => InExpr_Subquery(visit(n)(subquery))
    }
  }

  /*-
     LIKE ScalarOrSubselectExpr Escape?
   */
  def likeExpr(node: Node) = {
    val like = visit(node.getNode(0))(scalarOrSubselectExpr)
    val esc = visitOpt(node.getNode(1))(escape)
    LikeExpr(like, esc)
  }

  /*-
     ESCAPE ScalarExpr
   */
  def escape(node: Node) = {
    val expr = visit(node.getNode(0))(scalarExpr)
    Escape(expr)
  }

  /*-
     MEMBER OF? CollectionValuedPathExpr
   */
  def collectionMemberExpr(node: Node) = {
    val expr = visit(node.getNode(0))(collectionValuedPathExpr)
    CollectionMemberExpr(expr)
  }

  /*-
     EXISTS LParen Subquery RParen 
   */
  def existsExpr(node: Node) = {
    val subq = visit(node.getNode(0))(subquery)
    ExistsExpr(subq)
  }

  /*-
     EQ ComparisonExprRightOperand
   / NE ComparisonExprRightOperand
   / GT ComparisonExprRightOperand
   / GE ComparisonExprRightOperand
   / LT ComparisonExprRightOperand
   / LE ComparisonExprRightOperand
   */
  def comparisonExpr(node: Node) = {
    val op = node.getString(0) match {
      case "="  => EQ
      case "<>" => NE
      case ">"  => GT
      case ">=" => GE
      case "<"  => LT
      case "<=" => LE
    }
    val right = visit(node.getNode(1))(comparisonExprRightOperand)
    ComparisonExpr(op, right)
  }

  /*-
     ArithExpr
   / NonArithScalarExpr
   / AnyOrAllExpr
   */
  def comparisonExprRightOperand(node: Node) = {
    val n = node.getNode(0)
    n.getName match {
      case "ArithExpr"          => ComparsionExprRightOperand_ArithExpr(visit(n)(arithExpr))
      case "NonArithScalarExpr" => ComparsionExprRightOperand_NonArithScalarExpr(visit(n)(nonArithScalarExpr))
      case "AnyOrAllExpr"       => ComparsionExprRightOperand_AnyOrAllExpr(visit(n)(anyOrAllExpr))
    }
  }

  /*-
     SimpleArithExpr
   / LParen Subquery RParen
   */
  def arithExpr(node: Node) = {
    val n = node.getNode(0)
    val expr = n.getName match {
      case "SimpleArithExpr" => Left(visit(n)(simpleArithExpr))
      case "Subquery"        => Right(visit(n)(subquery))
    }
    ArithExpr(expr)
  }

  /*-
     ArithTerm ( ArithTermPlus / ArithTermMinus )* 
   */
  def simpleArithExpr(node: Node) = {
    val term = visit(node.getNode(0))(arithTerm)
    val terms = visitList(node.getList(1)) { n =>
      n.getName match {
        case "ArithTermPlus"  => ArithTerm_Plus(visit(n.getNode(0))(arithTerm))
        case "ArithTermMinus" => ArithTerm_Minus(visit(n.getNode(0))(arithTerm))
      }
    }
    SimpleArithExpr(term, terms)
  }

  /*-
     ArithFactor ( ArithFactorMultiply / ArithFactorDivide )* 
   */
  def arithTerm(node: Node): ArithTerm = {
    val factor = visit(node.getNode(0))(arithFactor)
    val factors = visitList(node.getList(1)) { n =>
      n.getName match {
        case "ArithFactorMultiply" => ArithFactor_Multiply(visit(n.getNode(0))(arithFactor))
        case "ArithFactorDivide"   => ArithFactor_Divide(visit(n.getNode(0))(arithFactor))
      }
    }
    ArithTerm(factor, factors)
  }
